WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.bas

Public Declare Function lcPaintArc Lib "Litecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal R As Double, ByVal Ang0 As Double, ByVal AngArc As Double) As Long
Public Declare Function lcPaintSetFont Lib "Litecad.dll" (ByVal szFontName As String, ByVal Height As Double, ByVal Angle As Double, ByVal bBold As Long, ByVal bItalic As Long, ByVal bUnderline As Long, ByVal bStrikeOut As Long) As Long
Public Declare Function lcPaintSetTextColor Lib "Litecad.dll" (ByVal ColorRed As Long, ByVal ColorGreen As Long, ByVal ColorBlue As Long) As Long
Public Declare Function lcPaintText Lib "Litecad.dll" (ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Align As Long) As Long
Public Declare Function lcPaintEnd Lib "Litecad.dll" () As Long
Public Declare Sub lcSurfInitialize Lib "Litecad.dll" (ByVal MaxSectPnt As Long, ByVal AngStep As Double)
Public Declare Sub lcSurfUnInitialize Lib "Litecad.dll" ()
Public Declare Sub lcSurfClearTriangles Lib "Litecad.dll" ()
Public Declare Function lcSurfAddTriangle Lib "Litecad.dll" (ByVal X0 As Double, ByVal Y0 As Double, ByVal Z0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Z1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal Z2 As Double) As Long
Public Declare Function lcSurfGetZ Lib "Litecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal pZ As Long) As Long
Public Declare Function lcSurfGetZ_dbg Lib "Litecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal pZ As Long, ByVal pX0 As Long, ByVal pY0 As Long, ByVal pZ0 As Long, ByVal pX1 As Long, ByVal pY1 As Long, ByVal pZ1 As Long, ByVal pX2 As Long, ByVal pY2 As Long, ByVal pZ2 As Long) As Long
Public Declare Sub lcSurfClearPlan Lib "Litecad.dll" ()
Public Declare Function lcSurfAddPlanVer Lib "Litecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal Bulge As Double) As Long
Public Declare Function lcSurfMakeSection Lib "Litecad.dll" () As Long
Public Declare Function lcSurfGetSectPoint Lib "Litecad.dll" (ByVal iPnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long) As Long
Public Declare Function lcCSectClear Lib "Litecad.dll" () As Long
Public Declare Function lcCSectBegin Lib "Litecad.dll" (ByVal PlineType As Long) As Long
Public Declare Function lcCSectAddPoint Lib "Litecad.dll" (ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcCSectEnd Lib "Litecad.dll" () As Long
Public Declare Function lcCSectCalcArea Lib "Litecad.dll" () As Long
Public Declare Function lcCSectGetArea Lib "Litecad.dll" (ByVal iArea As Long, ByVal pAreaVal As Long, ByVal pNumPnts As Long) As Long
Public Declare Function lcCSectGetAreaPoint Lib "Litecad.dll" (ByVal iArea As Long, ByVal iPnt As Long, ByVal pX As Long, ByVal pY As Long) As Long
Public Declare Sub lcEventReturnCode Lib "Litecad.dll" (ByVal code As Long)
Public Declare Sub lcEventsEnable Lib "Litecad.dll" (ByVal bEnable As Long)
Public Declare Sub lcOnEventMouseMove Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventMouseDown Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventMouseUp Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventMouseDblClk Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventMouseSnap Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventMouseLeave Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventMouseWheel Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventKeyDown Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventPaint Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventZoom Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventSelectView Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventGetPoint Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventAddCommand Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventCmdStart Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventCmdFinish Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventCmdMouseDown Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventCmdMouseUp Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventCmdMouseMove Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventCmdString Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventAddEntity Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventRegen Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventFioProgress Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventSelection Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventPropChanged Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventGripSelect Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventGripMove Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventEntErase Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventEntMove Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventEntRotate Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventEntScale Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventEntMirror Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventEntProp Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventHelp Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventAddStr Lib "Litecad.dll" (ByVal pFunc As Any)
Public Declare Sub lcOnEventFontReplace Lib "Litecad.dll" (ByVal pFunc As Any)
